completed the first JS module

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Homework-JS1</title>
   </head>
   <body>
-    <script src="./src/index.js"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
